--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/lasagna.html">World's <em>Best</em> Lasagna</a></li>
+    </ul>
 </body>
 </html>
