--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,38 @@
     <title>Worlds_Best_Lasagna</title>
 </head>
 <body>
+
     <h1>World's <strong>Best</strong> Lasagna</h1>
+
+    <img src="../img/lasagna.png" alt="Homemade lasagna in a baking dish.">
+
+    <h3>The Worlds Best Homemade Three Cheese Lasagna</h3>
+
+    <p>Making lasagna can be time-consuming, but the results are well worth 
+        the wait. You'll find a detailed ingredient list and step-by-step instructions 
+        in the recipe below, but let's go over the basics:
+    </p>
+
+    <h2>Lasagna Ingredients</h2>
+
+    <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, 
+        so you can easily alter the ingredient list to suit your needs. If you want to stay true 
+        to the original recipe, though, these are the ingredients you'll need to add to your 
+        grocery list:
+    </p>
+
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Tomatos</li>
+        <li>Sugar</li>
+        <li>Spices/Seasonings</li>
+        <li>Lasagna Noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
+
+    
 </body>
 </html>
