Added to lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -17,7 +17,7 @@
         in the recipe below, but let's go over the basics:
     </p>
 
-    <h2>Lasagna Ingredients</h2>
+    <h4>Lasagna Ingredients</h4>
 
     <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, 
         so you can easily alter the ingredient list to suit your needs. If you want to stay true 
@@ -37,6 +37,37 @@
         <li>Egg</li>
     </ul>
 
+    <h4><em>How to make</em> - Step by Step</h4>
+
+    <ol>
+        <li>Make the meat sauce</li>
+        <li>Cook the noodles</li>
+        <li>Make the ricotta mixture</li>
+        <li>Layer the lasagna according to the "How to Layer" below</li>
+        <li>Cover with foil and bake according to the "How to Bake" below</li>
+        <li>Let the lasagna rest before serving</li>
+    </ol>
+
+    <h4>How to Layer your Three Cheese Lasanga:</h4>
+
+    <ol>
+        <li>Meat Sauce</li>
+        <li>Noodles</li>
+        <li>Ricotta Mixture</li>
+        <li>Mozzarella slices</li>
+        <li>Meat Sauce</li>
+        <li>Parmesan Cheese</li>
+        <li>Repeat layers and top with Parmesan Cheese</li>
+    </ol>
+
+    <h4>How to Bake:</h4>
+
+    <ol>
+        <li>Preheat oven to 370 F</li>
+        <li>Bake with the foil still covering the dish for 30 min.</li>
+        <li>Uncover dish and continue baking for another 20-30 min.</li>
+        <li>Left uncovered to rest at room temp. for approx 15 min.</li>
+    </ol>
     
 </body>
 </html>
