--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 
     <h1>World's <strong>Best</strong> Lasagna</h1>
 
-    <img src="../img/lasagna.png" alt="Homemade lasagna in a baking dish.">
+    <img src="../img/baked-lasagna.avif" alt="Homemade lasagna in a baking dish.">
 
     <h3>The Worlds Best Homemade Three Cheese Lasagna</h3>
 
@@ -48,7 +48,7 @@
         <li>Let the lasagna rest before serving</li>
     </ol>
 
-    <h4>How to Layer your Three Cheese Lasanga:</h4>
+    <h4><em>How to Layer</em> your Three Cheese Lasanga:</h4>
 
     <ol>
         <li>Meat Sauce</li>
@@ -60,7 +60,7 @@
         <li>Repeat layers and top with Parmesan Cheese</li>
     </ol>
 
-    <h4>How to Bake:</h4>
+    <h4><em>How to Bake</em> your Three Cheese Lasanga:</h4>
 
     <ol>
         <li>Preheat oven to 370 F</li>
@@ -68,6 +68,6 @@
         <li>Uncover dish and continue baking for another 20-30 min.</li>
         <li>Left uncovered to rest at room temp. for approx 15 min.</li>
     </ol>
-    
+
 </body>
 </html>
