Added images and recipes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">World's <em>Best</em> Lasagna</a></li>
+        <li><a href="recipes/beef-burritos.html">Beef Burritos</a></li>
+        <li><a href="recipes/3-eggs.html">Three Eggs and Meat</a></li>
     </ul>
+
+    <img src="./img/man-baking.jpg" alt="Clip art of a man pulling a dish out of an oven">
 </body>
 </html>
