Added to recipes

--- a/recipes/3-eggs.html
+++ b/recipes/3-eggs.html
@@ -6,8 +6,50 @@
     <title>Three_Eggs_n_Meat</title>
 </head>
 <body>
+
+    <h1>Three Eggs and Meat</h1>
+
     <img src="../img/eggs-n-meat.jpeg" alt="Clip art of an egg and sausage in a frying pan" height="300" width="320">
-</br>
+
+    <p><em>Three Eggs and Meat</em> is just a simple take of over easy eggs, sausage links, bacon and ham slices served with
+    breakfast potatos and your choice of toast. A simple but delious meal, thats honestly acceptable for breakfast, lunch or dinner.
+    </p>
+
+    <h3><em>Ingredients:</em></h3>
+
+    <ul>
+        <li>3 eggs</li>
+        <li>3 slices of bacon</li>
+        <li>3 slices of ham</li>
+        <li>3 sausage links</li>
+        <li>3 russel potatos</li>
+        <li>1 onion</li>
+        <li>butter</li>
+        <li>bread</li>
+        <li>spices</li>
+    </ul>
+
+    <h3><em>Preperations:</em></h3>
+
+    <ol>
+        <li>Start with washing potatos and slicing into cubes</li>
+        <li>Dice your onion</li>
+        <li>Get a pan on med/high heat</li>
+        <li>Get toaster, bread and butter set up</li>
+    </ol>
+
+    <h3><em>Cooking:</em></h3>
+
+    <ol>
+        <li>Starting with the meats, get all 9 pieces of meat into the pan and cook until your liking</li>
+        <li>After all the meat is prepared, in the same pan you want to toss in your potatos and onions</li>
+        <li>*Add butter to pan if needed*</li>
+        <li>As your potatos are begining to brown start cooking your toast</li>
+        <li>Once potatoes are nice and golden brown, pull off heat and season</li>
+        <li>Butter toast</li>
+    </ol>
+
+
     <img src="../img/egg.avif" alt="Egg in a frying pan" size="pixelhight" height="255" width="320">
 </body>
 </html>
