--- a/recipes/beef-burritos.html
+++ b/recipes/beef-burritos.html
@@ -7,6 +7,39 @@
 </head>
 
 <body>
+
+    <h1>Beef Burrito</h1>
     
+    <h3><em>Ingredients:</em></h3>
+
+    <ul>
+        <li>1 can refried beans</li>
+        <li>1/2 lb ground beef</li>
+        <li>1/2 can rotel</li>
+        <li>1/2 onion diced</li>
+        <li>seasonings</li>
+        <li>tortillas</li>
+        <li>cheese</li>
+    </ul>
+
+    <h3><em>Instructions:</em></h3>
+
+    <ol>
+        <li>Brown ground beef and half of the onions in a large pan over med/high heat</li>
+        <li>Mix in the spices and continue cooking while stirring for 3-5 min until thoroughly coated</li>
+        <li>Ad refried beans and rotel and continue stirring until heated through</li>
+        <li>Spoon onto toasted tortillas with cheese and raw onion</li>
+    </ol>
+
+    <h4>Notes:</h4>
+
+    <ul>
+        <li>Normally I drain the fat whenever I brown ground beef but not with this dish, The beans need the fat.</li>
+        <li>After step 2, you have basic taco meat, good for many dishes like taco salads or added to queso.</li>
+        <li>Beef and bean filling is also a great bean dip for a party</li>
+        <li>Finally, always toast your tortillas. If you do not have a comal or a griddle, a heavy pan will do.
+    </br> 
+            Use medium heat and flip every 15-20 seconds until it takes a little color and blisters start to inflate.</li>
+    </ul>
 </body>
 </html>
